[package]
name = "peggle"
version = "0.1.0"
authors = [ "Nathaniel Bennett <me@nathanielbennett.com>" ]
description = "A simple regex-like parsing library, capable of handling Parsing Expression Grammar (PEG) rules."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nathaniel-bennett/peggle"
readme = "../README.md"
keywords = ["peg", "regex", "parser", "parsing", "grammar"]
categories = ["parsing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
